@@ -1,3 +1,10 @@
+2007-07-04  Andreas Kupries <andreask@activestate.com>
+
+	* macosx/tkMacOSXXStubs.c (DestroyImage): Fixed seg.fault in
+	  release of image data for images coming from XGetImage. Change
+	  committed by me for Daniel Steffen. See 2007-06-23 for the
+	  change which introduced the problem.
+
 2007-07-02  Daniel Steffen  <das@users.sourceforge.net>
 
 	* xlib/xgc.c (XCreateGC): correct black and white pixel values used to
